# soksak-plugin-workflow

./: .gitignore  Cargo.toml  Makefile  README.ko.md  README.md  build.mjs  main.js  package-lock.json  package.json  plugin.json  reconcile.test.mjs
.cargo/: config.toml
agents/: consensus-reviewer.md
docs/: ARCHITECTURE.md  COMPLETION.ko.md  COMPLETION.md  PRINCIPLES.ko.md  PRINCIPLES.md
e2e/: Makefile  app-e2e.mjs  idea.txt  run-e2e.zsh
fixtures/: cockpit.skeleton.json  compare-clarp.skeleton.json  compare-clarp.workflow.js  deep-research.skeleton.json  domain-spec.workflow.js  domain-spec.workflow.json  draft.skeleton.json  fanout-demo.workflow.js  gen.pharmacy.js  gen.pharmacy.skeleton.json  mini-spec.skeleton.json  mini-spec.workflow.js  mini-spec.workflow.json  soksak-pipeline.sample-output.json  soksak-pipeline.workflow.js  soksak-pipeline.workflow.json  soksak-spec.skeleton.json  soksak-spec.workflow.js  threaded-spec.workflow.js  threaded-spec.workflow.json
js/: board.js  gate.js  git.js  index.js  railBridge.js
plugin/: main.js  plugin.json
references/: draft-skill.md  plan-skill.md  research-skill.md  routing-skill.md
scripts/: archive.mjs  build-release.mjs  publish-release.mjs  release-context.mjs
skill/: SKILL.md
src/: consensus.rs  derive_directive.rs  directive_loop.rs  doc_exec.rs  domain_lib.rs  draft_doc.rs  emit_host.rs  exec.rs  exec_one.rs  generate_skeleton.rs  host.rs  interp.rs  lang.rs  lib.rs  main.rs  paths.rs  provider.rs  reconcile.rs  reconcile_tests.rs  scheduler.rs  skeleton.rs  wf_service.rs  workflow_host.rs
test/: board.test.mjs  gate.test.mjs  plugin.test.mjs  (+1 more)
(+34 files in other folders)
