[package]
name = "soksak-sidecar-workflow"
version = "0.0.1"
edition = "2021"
description = "워크플로 골격 실행 런타임 — 발행(--emit)·실행(exec-one/exec-stage)·③파생. agent 는 claude -p 로 실행."

[[bin]]
name = "soksak-sidecar-workflow"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wait-timeout = "0.2"
# plugin service 와이어+serve 하니스 공유 크레이트(PS17 — 상수·serve 사본 금지, 크레이트 의존).
# 정본 분배는 crates.io(plugin-spec 이 npm 으로 배포되는 것과 동형). 로컬 공동개발은 경로 override.
soksak-service-proto = { path = "../soksak-service-proto" }
