[package]
name = "soksak-sidecar-workflow"
version = "0.0.1"
edition = "2021"
description = "워크플로 골격 실행 런타임 — 발행(--emit)·실행(exec-one/exec-stage)·③파생. agent 는 claude -p 로 실행."

[[bin]]
name = "soksak-sidecar-workflow"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wait-timeout = "0.2"
# plugin service 와이어+serve 하니스 공유 크레이트(PS17 — 상수·serve 사본 금지, 크레이트 의존).
# 배포 정본은 crates.io 에 발행된 soksak-spec-service(plugin-spec 이 npm 인 것과 동형) — CI 는 그 버전을
# 의존한다. 로컬 공동개발은 아래 경로 override 로 코어의 정본 크레이트를 직접 본다.
soksak-spec-service = { git = "https://github.com/soksak-ai/soksak.git", branch = "main" }
